<resources>

    <!-- Main layout Strings Start -->
    <string name="app_name">Sample Music Player</string>
    <string name="main_header_two">David Auza</string>
    <string name="main_button_back"><![CDATA[<<]]></string>
    <string name="main_button_pause"><![CDATA[||]]></string>
    <string name="main_button_play"><![CDATA[>]]></string>
    <string name="main_button_forward"><![CDATA[>>]]></string>
    <string name="main_song_name">Colombia\'s National Anthem</string>
    <string name="main_toast_playing">Playing Sound</string>
    <string name="main_toast_pausing">Pausing Sound</string>
    <string name="main_toast_back">You have jumped back 5 seconds</string>
    <string name="main_toast_back_not_possible">Can\'t jump back right now</string>
    <string name="main_toast_forward">You have jumped forward 5 seconds</string>
    <string name="main_toast_forward_not_possible">Can\'t jump forward right now</string>
    <string name="main_timer">%d min, %d sec</string>
    <string name="main_toast_done">I\'m done!</string>
    <string name="main_content_description">Colombia\'s flag</string>
</resources>
