<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        style="@style/MainHeaders"
        android:layout_alignParentTop="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/header_two"
        style="@style/MainHeaders"
        android:layout_below="@id/header"
        android:text="@string/main_header_two"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_two"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/main_content_description"
        android:src="@drawable/colombia_flag" />

    <LinearLayout
        android:id="@+id/ly_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/MainButtons"
            android:text="@string/main_button_back" />

        <Button
            android:id="@+id/pause_button"
            style="@style/MainButtons"
            android:text="@string/main_button_pause" />

        <Button
            android:id="@+id/play_button"
            style="@style/MainButtons"
            android:text="@string/main_button_play" />

        <Button
            android:id="@+id/forward_button"
            style="@style/MainButtons"
            android:text="@string/main_button_forward" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ly_button_container"
        android:layout_alignStart="@id/header"
        android:layout_alignLeft="@id/header"
        android:layout_alignEnd="@id/header"
        android:layout_alignRight="@id/header" />

    <TextView
        android:id="@+id/timer_left"
        style="@style/MainTimers"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:text="00:00" />

    <TextView
        android:id="@+id/timer_right"
        style="@style/MainTimers"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text="00:00" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/timer_left"
        android:layout_centerHorizontal="true"
        android:text="@string/main_song_name"
        android:textAppearance="?android:textAppearanceMedium" />

</RelativeLayout>